--- a/Mission6Ass/Views/Home/Index.cshtml
+++ b/Mission6Ass/Views/Home/Index.cshtml
@@ -6,3 +6,7 @@
     <h1 class="display-4">The Joel Hilton Film Collection</h1>
     <img src="~/joelPic.jpg" width="500" />
 </div>
+
+<div>
+    <a asp-controller="Home" asp-action="MovieList">View Movie List</a>
+</div>
