--- a/Mission6Ass/Views/Home/MovieForm.cshtml
+++ b/Mission6Ass/Views/Home/MovieForm.cshtml
@@ -3,9 +3,17 @@
 <h1>Movie Form</h1>
 
 <form method="post">
-
-    <label asp-for="Category">Category:</label>
-    <input asp-for="Category"/>
+    
+    <input type="hidden" asp-for="MovieId" />
+    
+    <label asp-for="CategoryId">Select the Movie Category</label>
+    <select>
+        <option value="">Select a Category</option>
+        @foreach (Category c in ViewBag.Categories)
+        {
+            <option value="@c.CategoryId">@c.CategoryName</option>
+        }
+    </select>
     <br/>
     <label asp-for="Title">Title:</label>
     <input asp-for="Title"/>
@@ -33,10 +41,18 @@
     <label asp-for="LentTo">Lent To:</label>
     <input asp-for="LentTo"/>
     <br/>
+    <label asp-for="CopiedToPlex">Copied To Plex:</label>
+    <select asp-for="CopiedToPlex" class="form-select">
+        <option value="true">Yes</option>
+        <option value="false">No</option>
+    </select>
+    <br/>
     <label asp-for="Notes">Notes:</label>
     <input asp-for="Notes"/>
     <br/>
 
     <button type="submit">Submit Form</button>
+    
+    <div asp-validation-summary="All"></div>
     
 </form>
